# johnny

./: .all-contributorsrc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile.linux-aarch64  build-release.sh  build.rs  config.toml.example  consumer.readme.md  developer.readme.md  gulpfile.js  justfile  new-package.sh  package.json  pnpm-lock.yaml  readme.md  run.sh  tsconfig.json
.cargo/: config.toml
.github/: extensions.json
.github/workflows/: check-and-lint.yml  ci.yml  clippy.yml  release.yml
assets/cah/: .gitignore  splitter.py
assets/cah/packs/: 2012holidaypack.bson  2013holidaypack.bson  2014holidaypack.bson  90snostalgiapack.bson  absurdboxexpansion.bson  cah2000snostalgiapack.bson  cahaipack.bson  cahasspack.bson  cahbaseset.bson  cahblueboxexpansion.bson  cahboxexpansion.bson  cahcanadianconversionkit.bson  cahcollegepack.bson  cahfamilyeditionfreeprintplaypublicbeta.bson  cahfifthexpansion.bson  cahfirstexpansion.bson  cahfourthexpansion.bson  cahgreenboxexpansion.bson  cahhiddengemsbundleafewnewcardswecrammedintothisbundlepackamazonexclusive.bson  cahhumanpack.bson  cahmaindeck.bson  cahprocedurallygeneratedcards.bson  cahredboxexpansion.bson  cahsecondexpansion.bson  cahsixthexpansion.bson  cahthirdexpansion.bson  cahukconversionkit.bson  cardsagainsthumanitysavesamericapack.bson  clickholegreetingcardspacktargetexclusive.bson  dadpack.bson  desertbusforhopepack.bson  fantasypack.bson  fascismpack.bson  foodpack.bson  geekpack.bson  gencon2018midtermelectionpack.bson  houseofcardspack.bson  jackwhiteshowpack.bson  jewpackchosenpeoplepack.bson  masseffectpack.bson  (+31 more)
docker/: Dockerfile.aarch64
docker/cross/: Dockerfile.aarch64
entity/: Cargo.toml
migration/: Cargo.toml
migration/src/: helpers.rs  lib.rs  m20230711_163234_create_guild.rs  m20230711_163234_guild.rs  m20230711_173402_create_user.rs  m20230711_173402_user.rs  m20230712_192057_autorole.rs  m20230716_231443_member.rs  m20230727_210614_sticky.rs
scripts/: fresh.sh
src/: config.rs  constants.ts  control_panel.rs  embed.rs  index.ts  lib.rs  logger.rs  macros.rs  main.rs
src/commands/: Meow.ts  autorole.rs  emit.rs  meow.rs  mod.rs  ping.rs
src/commands/autorole/: autorole.rs  mod.rs
src/commands/general/: mod.rs  ping.rs
src/commands/image/: mod.rs  pride.rs
src/commands/image/pride/: circle.rs  mod.rs  overlay.rs
src/commands/moderation/: autorole.rs  mod.rs
src/commands/moderation/autorole/: add.rs  list.rs  mod.rs  remove.rs  toggle.rs
src/db/: autorole.rs  guild.rs  member.rs  mod.rs  user.rs
src/db/entity/: autorole.rs  guild.rs  mod.rs  prelude.rs  user.rs
src/errors/: command.rs  mod.rs
src/events/: member_join.rs  mod.rs  ready.rs  suggestion_made.rs
src/events/autorole/: apply_role.rs  mod.rs  role_delete.rs
src/events/general/: mod.rs  ready.rs
src/events/johnny/: mod.rs  single_username.rs  suggestion.rs
src/listeners/: Ready.ts  SuggestionMade.ts
src/logger/: entry.rs  level.rs  mod.rs  style.rs
src/preludes/: command.rs  event.rs  eyre.rs  general.rs  mod.rs  tui.rs
src/tui/: helpers.rs  mod.rs
src/tui/views/: log.rs  main.rs
src/views/: log.rs  main.rs  mod.rs
template/: Cargo.toml  Cargo.toml.build  build.rs  cargo-generate.toml  pre-script.rhai
template/src/: lib.rs
