[workspace]
members = [
	"migration",
	"packages/autorole",
	"packages/bot",
	"packages/common",
	"packages/db",
	"packages/johnny",
	"packages/logger",
	"packages/pride",
	"packages/tui"
]

default-members = ["packages/bot"]

[workspace.dependencies]
sea-orm = { version = "0.11.3", features = ["runtime-tokio-rustls", "macros"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
poise = "0.5.5"
cfg_aliases = "0.1.1"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
color-eyre = "0.6.2"
serde = "1.0.171"
ratatui = "0.22.0"
crossterm = "0.26.1"
image = "0.24.6"
reqwest = "0.11.18"

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
dockerfile = "./docker/Dockerfile.aarch64"

[workspace.metadata.cargo-all-features]
always_include_features = ["sqlite"]
denylist = ["postgres", "mysql"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
