[workspace]
default-members = ["packages/bot"]
members = [
  "packages/autorole",
  "packages/bot",
  "packages/common",
  "packages/johnny",
  "packages/logger",
  "packages/pride",
  "packages/tui",
  "packages/minecraft"
]

[workspace.package]
authors = ["newtykins"]
edition = "2021"
publish = false
version = "0.1.0"

[workspace.dependencies]
cfg_aliases = "0.1.1"
color-eyre = "0.6.2"
crossterm = "0.26.1"
image = "0.24.6"
once_cell = "1.18.0"
poise = "0.5.5"
ratatui = "0.22.0"
rayon = "1.7.0"
reqwest = "0.11.18"
sea-query = { version = "0.30.0", features = ["attr"] }
sea-query-binder = "0.5.0"
serde = "1.0.171"
serenity = { version = "0.11.5", default-features = false, features = [
  "client",
  "gateway",
  "rustls_backend",
  "model",
  "cache",
] }
strum = "0.25.0"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-rustls"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
dockerfile = "./docker/cross/Dockerfile.aarch64"

[workspace.metadata.cargo-all-features]
always_include_features = ["sqlite"]
denylist = ["postgres", "mysql"]

[profile.dev]
opt-level = 0
overflow-checks = false

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
