[package]
authors.workspace = true
edition.workspace = true
name = "migration"
publish.workspace = true
version.workspace = true

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
once_cell = { workspace = true }
sea-orm-migration = { version = "0.11.0", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
